# src resources CMakeLists

add_custom_target(start_here_zip ALL
	WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/start_here"
	COMMAND
	${CMAKE_COMMAND} -E tar "cfv" "start_here.zip" --format=zip
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/blank.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/cb.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/new.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/reopen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/tip.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/title_0802.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/title_1005.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/title_1211.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/title_1312.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/title_1601.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/title_1712.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/trash_16x16.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/trash.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/www.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/start_here.html"
	"${CMAKE_CURRENT_SOURCE_DIR}/start_here/title_1312.svg"
	COMMAND
	${CMAKE_COMMAND} -E copy 
	"start_here.zip"
	"${CMAKE_BINARY_DIR}/src/src/resources"
)

add_custom_target(resources_zip ALL
	WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
	COMMAND
	${CMAKE_COMMAND} -E tar "cfv" "resources.zip" --format=zip
	# images for zip lower
	"${CMAKE_CURRENT_SOURCE_DIR}/images/closebutton.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/codeblocks.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/compile.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/compilerun.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/folder_new.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/folder.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/rebuild.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/source.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/splash_0802.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/splash_1005.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/splash_1211.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/splash_1312.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/splash.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/stop.png"
	# xrcs for zip
	"${CMAKE_CURRENT_SOURCE_DIR}/app_compiler_settings.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/ask_assocs.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/debugger_menu.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/debugger_toolbar.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/disassembly.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/dlg_about_plugin.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/dlg_about.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/edit_keywords.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/editor_configuration.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/env_settings.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/main_menu.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/main_toolbar.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/manage_assocs.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/memdump.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/print_dialog.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/project_deps.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/project_options.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/scripting_settings.xrc"
	"${CMAKE_CURRENT_SOURCE_DIR}/virtualbuildtargetsdlg.xrc"
	# images for zip
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/bookmark_add.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/dbginfo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/dbgnexti.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/dbgnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/dbgpause.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/dbgrun.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/dbgrunto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/dbgstepi.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/dbgstepout.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/dbgstep.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/dbgstop.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/dbgwindow.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/editcopy.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/editcut.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/editpaste.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/exit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/fileclose.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/filefindnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/filefind.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/filefindprev.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/filenew.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/fileopen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/fileprint.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/filesaveall.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/filesaveas.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/filesave.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/findf.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/goto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/history_clear.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/idea.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/info.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/plug.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/redo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/searchreplacef.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/searchreplace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/16x16/undo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/bookmark_add.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/dbginfo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/dbgnexti.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/dbgnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/dbgpause.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/dbgrun.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/dbgrunto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/dbgstepi.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/dbgstepout.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/dbgstep.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/dbgstop.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/dbgwindow.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/editcopy.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/editcut.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/editpaste.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/exit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/fileclose.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/filefindnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/filefind.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/filefindprev.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/filenew.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/fileopen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/fileprint.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/filesaveall.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/filesaveas.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/filesave.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/findf.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/goto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/history_clear.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/idea.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/info.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/plug.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/redo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/searchreplacef.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/searchreplace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/20x20/undo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/bookmark_add.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/dbginfo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/dbgnexti.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/dbgnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/dbgpause.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/dbgrun.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/dbgrunto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/dbgstepi.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/dbgstepout.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/dbgstep.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/dbgstop.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/dbgwindow.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/editcopy.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/editcut.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/editpaste.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/exit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/fileclose.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/filefindnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/filefind.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/filefindprev.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/filenew.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/fileopen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/fileprint.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/filesaveall.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/filesaveas.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/filesave.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/findf.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/goto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/history_clear.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/idea.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/info.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/plug.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/redo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/searchreplacef.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/searchreplace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/24x24/undo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/bookmark_add.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/dbginfo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/dbgnexti.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/dbgnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/dbgpause.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/dbgrun.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/dbgrunto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/dbgstepi.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/dbgstepout.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/dbgstep.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/dbgstop.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/dbgwindow.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/editcopy.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/editcut.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/editpaste.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/exit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/fileclose.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/filefindnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/filefind.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/filefindprev.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/filenew.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/fileopen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/fileprint.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/filesaveall.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/filesaveas.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/filesave.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/findf.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/goto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/history_clear.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/idea.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/info.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/plug.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/redo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/searchreplacef.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/searchreplace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/28x28/undo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/bookmark_add.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/dbginfo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/dbgnexti.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/dbgnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/dbgpause.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/dbgrun.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/dbgrunto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/dbgstepi.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/dbgstepout.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/dbgstep.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/dbgstop.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/dbgwindow.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/editcopy.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/editcut.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/editpaste.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/exit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/fileclose.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/filefindnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/filefind.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/filefindprev.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/filenew.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/fileopen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/fileprint.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/filesaveall.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/filesaveas.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/filesave.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/findf.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/goto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/history_clear.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/idea.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/info.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/plug.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/redo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/searchreplacef.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/searchreplace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/32x32/undo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/bookmark_add.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/dbginfo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/dbgnexti.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/dbgnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/dbgpause.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/dbgrun.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/dbgrunto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/dbgstepi.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/dbgstepout.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/dbgstep.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/dbgstop.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/dbgwindow.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/editcopy.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/editcut.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/editpaste.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/exit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/fileclose.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/filefindnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/filefind.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/filefindprev.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/filenew.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/fileopen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/fileprint.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/filesaveall.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/filesaveas.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/filesave.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/findf.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/goto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/history_clear.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/idea.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/info.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/plug.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/redo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/searchreplacef.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/searchreplace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/40x40/undo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/bookmark_add.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/dbginfo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/dbgnexti.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/dbgnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/dbgpause.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/dbgrun.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/dbgrunto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/dbgstepi.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/dbgstepout.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/dbgstep.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/dbgstop.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/dbgwindow.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/editcopy.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/editcut.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/editpaste.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/exit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/fileclose.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/filefindnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/filefind.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/filefindprev.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/filenew.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/fileopen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/fileprint.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/filesaveall.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/filesaveas.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/filesave.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/findf.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/goto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/history_clear.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/idea.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/info.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/plug.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/redo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/searchreplacef.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/searchreplace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/48x48/undo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/bookmark_add.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/dbginfo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/dbgnexti.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/dbgnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/dbgpause.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/dbgrun.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/dbgrunto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/dbgstepi.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/dbgstepout.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/dbgstep.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/dbgstop.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/dbgwindow.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/editcopy.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/editcut.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/editpaste.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/exit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/fileclose.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/filefindnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/filefind.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/filefindprev.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/filenew.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/fileopen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/fileprint.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/filesaveall.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/filesaveas.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/filesave.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/findf.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/goto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/history_clear.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/idea.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/info.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/plug.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/redo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/searchreplacef.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/searchreplace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/56x56/undo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/bookmark_add.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/dbginfo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/dbgnexti.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/dbgnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/dbgpause.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/dbgrun.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/dbgrunto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/dbgstepi.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/dbgstepout.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/dbgstep.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/dbgstop.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/dbgwindow.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/editcopy.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/editcut.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/editpaste.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/exit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/fileclose.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/filefindnext.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/filefind.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/filefindprev.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/filenew.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/fileopen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/fileprint.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/filesaveall.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/filesaveas.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/filesave.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/findf.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/goto.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/history_clear.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/idea.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/info.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/plug.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/redo.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/searchreplacef.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/searchreplace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/64x64/undo.png"
	# tree images for zip
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/file.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/file-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/folder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/project.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/project-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/rc-file-added.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/rc-file-conflict.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/rc-file-external.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/rc-file-gotlock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/rc-file-lockstolen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/rc-file-mismatch.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/rc-file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/rc-file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/rc-file-noncontrolled.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/rc-file-outofdate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/rc-file-requireslock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/rc-file-uptodate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/vfolder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/workspace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/16x16/workspace-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/file.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/file-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/folder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/project.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/project-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/rc-file-added.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/rc-file-conflict.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/rc-file-external.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/rc-file-gotlock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/rc-file-lockstolen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/rc-file-mismatch.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/rc-file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/rc-file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/rc-file-noncontrolled.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/rc-file-outofdate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/rc-file-requireslock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/rc-file-uptodate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/vfolder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/workspace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/20x20/workspace-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/file.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/file-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/folder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/project.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/project-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/rc-file-added.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/rc-file-conflict.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/rc-file-external.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/rc-file-gotlock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/rc-file-lockstolen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/rc-file-mismatch.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/rc-file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/rc-file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/rc-file-noncontrolled.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/rc-file-outofdate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/rc-file-requireslock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/rc-file-uptodate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/vfolder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/workspace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/24x24/workspace-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/file.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/file-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/folder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/project.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/project-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/rc-file-added.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/rc-file-conflict.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/rc-file-external.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/rc-file-gotlock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/rc-file-lockstolen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/rc-file-mismatch.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/rc-file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/rc-file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/rc-file-noncontrolled.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/rc-file-outofdate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/rc-file-requireslock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/rc-file-uptodate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/vfolder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/workspace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/28x28/workspace-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/file.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/file-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/folder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/project.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/project-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/rc-file-added.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/rc-file-conflict.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/rc-file-external.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/rc-file-gotlock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/rc-file-lockstolen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/rc-file-mismatch.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/rc-file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/rc-file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/rc-file-noncontrolled.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/rc-file-outofdate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/rc-file-requireslock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/rc-file-uptodate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/vfolder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/workspace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/32x32/workspace-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/file.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/file-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/folder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/project.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/project-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/rc-file-added.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/rc-file-conflict.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/rc-file-external.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/rc-file-gotlock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/rc-file-lockstolen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/rc-file-mismatch.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/rc-file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/rc-file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/rc-file-noncontrolled.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/rc-file-outofdate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/rc-file-requireslock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/rc-file-uptodate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/vfolder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/workspace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/40x40/workspace-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/file.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/file-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/folder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/project.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/project-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/rc-file-added.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/rc-file-conflict.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/rc-file-external.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/rc-file-gotlock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/rc-file-lockstolen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/rc-file-mismatch.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/rc-file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/rc-file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/rc-file-noncontrolled.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/rc-file-outofdate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/rc-file-requireslock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/rc-file-uptodate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/vfolder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/workspace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/48x48/workspace-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/file.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/file-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/folder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/project.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/project-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/rc-file-added.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/rc-file-conflict.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/rc-file-external.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/rc-file-gotlock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/rc-file-lockstolen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/rc-file-mismatch.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/rc-file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/rc-file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/rc-file-noncontrolled.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/rc-file-outofdate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/rc-file-requireslock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/rc-file-uptodate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/vfolder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/workspace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/56x56/workspace-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/file.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/file-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/folder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/project.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/project-readonly.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/rc-file-added.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/rc-file-conflict.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/rc-file-external.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/rc-file-gotlock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/rc-file-lockstolen.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/rc-file-mismatch.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/rc-file-missing.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/rc-file-modified.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/rc-file-noncontrolled.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/rc-file-outofdate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/rc-file-requireslock.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/rc-file-uptodate.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/vfolder_open.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/workspace.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/tree/64x64/workspace-readonly.png"
	#infopane images for zip
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/16x16/edit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/16x16/flag.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/16x16/misc.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/20x20/edit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/20x20/flag.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/20x20/misc.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/24x24/edit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/24x24/flag.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/24x24/misc.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/28x28/edit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/28x28/flag.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/28x28/misc.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/32x32/edit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/32x32/flag.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/32x32/misc.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/40x40/edit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/40x40/flag.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/40x40/misc.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/48x48/edit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/48x48/flag.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/48x48/misc.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/56x56/edit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/56x56/flag.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/56x56/misc.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/64x64/edit.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/64x64/flag.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/infopane/64x64/misc.png"
	COMMAND
	${CMAKE_COMMAND} -E copy 
	"resources.zip"
	"${CMAKE_BINARY_DIR}/src/src/resources"
)

install(FILES "${CMAKE_BINARY_DIR}/src/src/resources/resources.zip" DESTINATION "share/codeblocks")
install(FILES "${CMAKE_BINARY_DIR}/src/src/resources/start_here.zip" DESTINATION "share/codeblocks")
install(FILES 
	"${CMAKE_CURRENT_SOURCE_DIR}/images/closebutton.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/codeblocks.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/compile.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/compilerun.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/folder_new.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/folder.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/rebuild.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/source.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/splash_0802.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/splash_1005.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/splash_1211.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/splash_1312.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/splash.png"
	"${CMAKE_CURRENT_SOURCE_DIR}/images/stop.png" 
	DESTINATION 
	"share/codeblocks/images"
)
install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/images/settings" DESTINATION "share/codeblocks/images")
